<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">

   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scrollbarStyle="insideInset"
        style="@android:style/Widget.Holo.ScrollView"
        android:clipToPadding="false"
        android:scrollIndicators="top|bottom"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:isScrollContainer="false"
        android:fillViewport="false">


       <TextView
           android:id="@+id/detailRecipe"
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:padding="15dp"
           android:textColor="#E0E0E0"
           android:textSize="16sp" />

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingrediantsRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp" />


</LinearLayout>